--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,20 +25,24 @@
 <h1>Movies</h1>
 
 <!-- Id "star_table" is useful for jQuery to find the html element with id, class here is mapping to Bootstrap defined class CSS -->
-<table id=movie_table class="table table-striped">
+<table id=star_table class="table table-striped">
     <!-- Create a table header -->
     <thead>
     <tr>
         <!-- Titles of each column-->
-        <th>Title</th>
+        <th>Movie Title</th>
         <th>Year</th>
         <th>Director</th>
+        <th>Genres</th>
+        <th>Stars</th>
         <th>Rating</th>
+
+
     </tr>
     </thead>
     <!-- Table body is left empty here, will be populated with the data retrieved with index.js -->
     <!-- Again, id "star_table_body" is useful for jQuery to find this html element -->
-    <tbody id=movie_table_body></tbody>
+    <tbody id=star_table_body></tbody>
 </table>
 
 <!-- Load jQuery and Bootstrap JS -->
