Working Single Movie and Movie List page, updating the Single Star page.

--- a/WebContent/single-star.html
+++ b/WebContent/single-star.html
@@ -28,9 +28,9 @@
 <table id=movie_table class="table table-striped">
     <thead>
     <tr>
-        <th>Movie Title</th>
-        <th>Release Year</th>
-        <th>Director</th>
+        <th>Name</th>
+        <th>Year of Birth</th>
+        <th>Movies</th>
         <th>
     </tr>
     </thead>
