--- a/WebContent/single-star.html
+++ b/WebContent/single-star.html
@@ -21,6 +21,7 @@
     <title>Single Star</title>
 </head>
 <body>
+<a href="index.html">← Back to Movie List</a>
 <h1>Single Star Page</h1>
 
 <!-- H3 body is left empty here, will be populated with the data retrieved with single-star.js -->
