--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,10 +4,25 @@
     1. Create a html template skeleton, with all the elements defined (some left empty) and named with ids.
     2. Load index.js to populate the data into empty elements.
     -->
-
 <!doctype html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            background-color: lightblue;
+            font-family: Verdana;
+        }
+        h1 {
+            color: blue;
+            text-align: center;
+        }
+        p {
+            font-family: verdana;
+        }
+        #star_table th, #star_table td {
+            font-weight: normal;
+        }
+    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport"
@@ -19,32 +34,34 @@
 
     <title>Movie List</title>
 </head>
-<body>
+<body style="background-color:lightsteelblue;">
 
-
-<h1>Movies</h1>
+<div style="width:90%; margin: 0 auto; font-family: verdana;">
+<h1 style="font-size: 50px;  padding-top:20px;  padding-bottom:20px;">Movies</h1>
 
 <!-- Id "star_table" is useful for jQuery to find the html element with id, class here is mapping to Bootstrap defined class CSS -->
-<table id=star_table class="table table-striped">
+    <div style="display: flex; justify-content: center; overflow-x: auto;">
+        <table id="star_table" class="table table-striped" style="text-align: center; width: auto;border: 1px solid white;">
+
     <!-- Create a table header -->
     <thead>
-    <tr>
+    <tr style="padding-top:10px;  padding-bottom:10px;">
         <!-- Titles of each column-->
-        <th>Movie Title</th>
-        <th>Year</th>
-        <th>Director</th>
-        <th>Genres</th>
-        <th>Stars</th>
-        <th>Rating</th>
+        <th style="width:25%;font-weight: bold;  padding-top:20px;  padding-bottom:20px;">Movie Title</th>
+        <th style="width:5%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Year</th>
+        <th style="width:15%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Director</th>
+        <th style="width:15%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Genres</th>
+        <th style="width:25%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Stars</th>
+        <th style="width:5%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Rating</th>
 
 
     </tr>
     </thead>
     <!-- Table body is left empty here, will be populated with the data retrieved with index.js -->
     <!-- Again, id "star_table_body" is useful for jQuery to find this html element -->
-    <tbody id=star_table_body></tbody>
-</table>
-
+    <tbody id=star_table_body ></tbody>
+    </table>
+    </div>
 <!-- Load jQuery and Bootstrap JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -54,7 +71,8 @@
 <!-- The path is relative to index.html, since these two files are in the same directory -->
 <!-- Note the url does not contain a "/" in the beginning, which means the url is relative to current path
      otherwise the url is relative to the root path-->
-<script src="index.js"></script>
+<script src="index.js" ></script>
+</div>
 </body>
 
 
