--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,8 +34,23 @@
 
     <title>Movie List</title>
 </head>
+<script>
+    $.ajax({
+        url: "api/index",
+        method: "GET",
+        success: function(data) {
+            console.log("User logged in:", data);
+        },
+        error: function() {
+            window.location.replace("login.html");
+        }
+    });
+</script>
 <body style="background-color:lightsteelblue;">
-
+<div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
+    <span id="user-info">Loading user…</span>
+    <button id="logout-button">Logout</button>
+</div>
 <div style="width:90%; margin: 0 auto; font-family: verdana;">
 <h1 style="font-size: 50px;  padding-top:20px;  padding-bottom:20px;">Movies</h1>
 
