--- a/WebContent/single-movie.html
+++ b/WebContent/single-movie.html
@@ -36,6 +36,10 @@
   <title>Single Movie</title>
 </head>
 <body style="background-color:lightsteelblue;">
+<div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
+  <span id="user-info">Loading user…</span>
+  <button id="logout-button">Logout</button>
+</div>
 <div style="width:90%; margin: 0 auto; font-family: verdana;">
 
 <a href="index.html">← Back to Movie List</a>
