--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -6,6 +6,10 @@
   <title>Login to Fablix</title>
 </head>
 <body>
+<div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
+  <span id="user-info">Loading user…</span>
+  <button id="logout-button">Logout</button>
+</div>
 <h2>Login to Fablix</h2>
 <!-- Set the method to POST to avoid showing the username/password in the URL
      The default action is disabled to allow your own implementation. -->
