--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,9 +1,3 @@
-<!-- This example is following frontend and backend separation.
-
-    This .html performs two steps:
-    1. Create a html template skeleton, with all the elements defined (some left empty) and named with ids.
-    2. Load index.js to populate the data into empty elements.
-    -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -23,15 +17,10 @@
             font-weight: normal;
         }
     </style>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <title>Movie List</title>
 </head>
 <script>
@@ -52,43 +41,36 @@
     <button id="logout-button">Logout</button>
 </div>
 <div style="width:90%; margin: 0 auto; font-family: verdana;">
-<h1 style="font-size: 50px;  padding-top:20px;  padding-bottom:20px;">Movies</h1>
+    <h1 style="font-size: 50px;  padding-top:20px;  padding-bottom:20px;">Movies</h1>
 
-<!-- Id "star_table" is useful for jQuery to find the html element with id, class here is mapping to Bootstrap defined class CSS -->
+    <form id="search-form" class="mb-4">
+        <input type="text" id="title" placeholder="Title">
+        <input type="text" id="year" placeholder="Year">
+        <input type="text" id="director" placeholder="Director">
+        <input type="text" id="star" placeholder="Star Name">
+        <button type="submit">Search</button>
+    </form>
+
     <div style="display: flex; justify-content: center; overflow-x: auto;">
         <table id="star_table" class="table table-striped" style="text-align: center; width: auto;border: 1px solid white;">
-
-    <!-- Create a table header -->
-    <thead>
-    <tr style="padding-top:10px;  padding-bottom:10px;">
-        <!-- Titles of each column-->
-        <th style="width:25%;font-weight: bold;  padding-top:20px;  padding-bottom:20px;">Movie Title</th>
-        <th style="width:5%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Year</th>
-        <th style="width:15%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Director</th>
-        <th style="width:15%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Genres</th>
-        <th style="width:25%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Stars</th>
-        <th style="width:5%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Rating</th>
-
-
-    </tr>
-    </thead>
-    <!-- Table body is left empty here, will be populated with the data retrieved with index.js -->
-    <!-- Again, id "star_table_body" is useful for jQuery to find this html element -->
-    <tbody id=star_table_body ></tbody>
-    </table>
+            <thead>
+            <tr style="padding-top:10px;  padding-bottom:10px;">
+                <th style="width:25%;font-weight: bold;  padding-top:20px;  padding-bottom:20px;">Movie Title</th>
+                <th style="width:5%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Year</th>
+                <th style="width:15%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Director</th>
+                <th style="width:15%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Genres</th>
+                <th style="width:25%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Stars</th>
+                <th style="width:5%;font-weight: bold; padding-top:20px;  padding-bottom:20px;">Rating</th>
+            </tr>
+            </thead>
+            <tbody id="star_table_body"></tbody>
+        </table>
     </div>
-<!-- Load jQuery and Bootstrap JS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-<!-- Load our own JS file -->
-<!-- The path is relative to index.html, since these two files are in the same directory -->
-<!-- Note the url does not contain a "/" in the beginning, which means the url is relative to current path
-     otherwise the url is relative to the root path-->
-<script src="index.js" ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="index.js"></script>
 </div>
 </body>
-
-
 </html>
