shopping cart mostly working

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,6 +38,7 @@
 <body style="background-color:lightsteelblue;">
 <div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
     <span id="user-info">Loading user…</span>
+    <button id="checkout-button">Checkout</button>
     <button id="logout-button">Logout</button>
 </div>
 <div id="genre-links" class="mb-3"></div>
