--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -10,30 +10,24 @@
   <span id="user-info">Loading user…</span>
   <button id="logout-button">Logout</button>
 </div>
+
 <h2>Login to Fablix</h2>
-<!-- Set the method to POST to avoid showing the username/password in the URL
-     The default action is disabled to allow your own implementation. -->
+<!-- We’ll intercept this submit in JS and POST to /api/login -->
 <form id="login_form" method="post" action="#">
-  <label><b>Username</b></label>
-  <label>
-    <input name="username" placeholder="Enter Username" type="text">
-  </label>
+  <label><b>Email</b></label>
+  <input
+          name="email">
   <br>
   <label><b>Password</b></label>
-  <label>
-    <input name="password" placeholder="Enter Password" type="password">
-  </label>
+  <input
+          name="password">
   <br>
   <input type="submit" value="Login">
 </form>
 
-<div id="login_error_message"></div>
+<div id="login_error_message" style="color:red;"></div>
 
-<!-- include jQuery-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!-- include our own JS file -->
 <script src="./login.js"></script>
-
 </body>
-
 </html>
