--- a/WebContent/browse-genre.html
+++ b/WebContent/browse-genre.html
@@ -1,14 +1,7 @@
-<!-- This example is following frontend and backend separation.
-
-    This .html performs two steps:
-    1. Create a html template skeleton, with all the elements defined (some left empty) and named with ids.
-    2. Load single-star.js to populate the data into empty elements.
-    -->
-
 <!doctype html>
 <html lang="en">
 <head>
-  <style >
+  <style>
     body {
       background-color: lightblue;
       font-family: Verdana;
@@ -20,77 +13,81 @@
     p {
       font-family: verdana;
     }
-    #movie_table th, #movie_table td {
+    #star_table th, #star_table td {
       font-weight: normal;
     }
   </style>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-  <title>Fabflix</title>
+  <title>Browse Movies by Genre</title>
 </head>
-<script>
-  $.ajax({
-    url: "api/index",
-    method: "GET",
-    success: function(data) {
-      console.log("User logged in:", data);
-    },
-    error: function() {
-      window.location.replace("login.html");
-    }
-  });
-</script>
+
 <body style="background-color:lightsteelblue;">
 <div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
   <span id="user-info">Loading user…</span>
-  <button id="logout-button">Logout</button>
+  <div>
+    <button id="logout-button" style="margin-right:8px;">Logout</button>
+  </div>
 </div>
+
 <div style="width:90%; margin: 0 auto; font-family: verdana;">
+  <a href="index.html" class="btn btn-link">← Back to Movie List</a>
+  <h1 style="font-size: 50px; padding-top:20px; padding-bottom:20px;">Browse Movies by Genre</h1>
 
-  <a href="index.html">← Back to Movie List</a>
-  <h1>Movie List Search</h1>
+  <!-- 🔥 Sorting and Page Size Controls -->
+  <div class="mb-4 d-flex justify-content-center flex-wrap align-items-center">
+    <label for="sort-by" class="mr-2">Sort by:</label>
+    <select id="sort-by" class="form-control mx-2" style="width:auto;">
+      <option value="title">Title</option>
+      <option value="rating">Rating</option>
+    </select>
 
-  <!-- H3 body is left empty here, will be populated with the data retrieved with single-star.js -->
-  <!-- single-star.js will find this html element by it's id "star_info" -->
-  <h3 id="genre_info"></h3>
+    <label for="sort-order" class="ml-4 mr-2">Order:</label>
+    <select id="sort-order" class="form-control mx-2" style="width:auto;">
+      <option value="asc">Ascending</option>
+      <option value="desc">Descending</option>
+    </select>
+
+    <label for="page-size" class="ml-4 mr-2">Movies per page:</label>
+    <select id="page-size" class="form-control mx-2" style="width:auto;">
+      <option value="10">10</option>
+      <option value="25">25</option>
+      <option value="50">50</option>
+      <option value="100">100</option>
+    </select>
+  </div>
+
+  <!-- 🔥 Table Structure to Match index.html -->
   <div style="display: flex; justify-content: center; overflow-x: auto;">
-    <table id=movie_table class="table table-striped" style="text-align: center; border: 1px solid white;">
+    <table id="movie_table" class="table table-striped" style="text-align: center; width: auto; border: 1px solid white;">
       <thead>
-      <tr>
-        <th style="width:20%;">Title</th>
-        <th style="width:10%;">Year</th>
-        <th style="width:20%;">Director</th>
-        <th style="width:20%;">Genres</th>
-        <th style="width:20%;">Stars</th>
-        <th style="width:10%;">Rating</th>
+      <tr style="padding-top:10px; padding-bottom:10px;">
+        <th style="width:25%;font-weight: bold;">Movie Title</th>
+        <th style="width:5%;font-weight: bold;">Year</th>
+        <th style="width:15%;font-weight: bold;">Director</th>
+        <th style="width:15%;font-weight: bold;">Genres</th>
+        <th style="width:25%;font-weight: bold;">Stars</th>
+        <th style="width:5%;font-weight: bold;">Rating</th>
       </tr>
       </thead>
-
-      <!-- Table body is left empty here, will be populated with the data retrieved with single-star.js -->
-      <!-- single-star.js will find this html element by it's id "movie_table_body" -->
-      <tbody id=movie_table_body></tbody>
+      <tbody id="movie_table_body"></tbody>
     </table>
   </div>
 
-  <!-- Load jQuery and Bootstrap JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-  <!-- Load our own JS file -->
-  <!-- The path is relative to single-star.html, since these two files are in the same directory -->
-  <!-- Note the url does not contain a "/" in the beginning, which means the url is relative to current path
-       otherwise the url is relative to the root path-->
-  <script src="browse-genre.js"></script>
+  <!-- 🔥 Pagination -->
+  <div class="d-flex justify-content-center mt-4">
+    <button id="prev-button" class="btn btn-secondary mx-2">Previous</button>
+    <button id="next-button" class="btn btn-secondary mx-2">Next</button>
+  </div>
 </div>
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="browse-genre.js"></script>
 </body>
-
-
 </html>
