fixed look of pages

--- a/WebContent/confirmation.html
+++ b/WebContent/confirmation.html
@@ -5,45 +5,12 @@
   <title>Order Confirmation</title>
   <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <style>
-    body {
-      background-color: #f2f9ff;
-      padding: 40px;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
-    .confirmation-box {
-      max-width: 600px;
-      margin: auto;
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-
-    .confirmation-box h1 {
-      color: #28a745;
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-    }
-
-    .confirmation-box p {
-      font-size: 1.1rem;
-    }
-
-    .btn-home {
-      margin-top: 30px;
-    }
-  </style>
-</head>
-<body>
-
-<div class="confirmation-box">
-  <h1>Order Placed!</h1>
-  <p>Thank you for your purchase. Your transaction has been successfully processed.</p>
-  <p>A receipt will be emailed to you shortly.</p>
-  <a href="index.html" class="btn btn-primary btn-home">Back to Movies</a>
+<body style="background-color: lightsteelblue; margin: 0; height: 50vh; display: flex; justify-content: center; align-items: center;">
+<div style="text-align: center; font-family: Verdana; font-weight: normal; width: 100%; max-width: 400px;">
+  <h1 style="font-size: 50px;  padding-top:20px;  padding-bottom:20px;font-weight:normal">Order Placed!</h1>
+  <p>Thank you for your purchase!</p>
+  <p>We will send you receipt shortly.</p>
+  <a href="index.html" class="btn btn-primary btn-home">Back to Movies!</a>
 </div>
 
 </body>
