--- a/WebContent/payment.html
+++ b/WebContent/payment.html
@@ -7,6 +7,18 @@
 <div style="padding: 20px; text-align: left; align-self: flex-start;">
   <a href="index.html" style="font-size: 20px; ">&larr; Back to Movies</a>
 </div>
+<script>
+  $.ajax({
+    url: "api/index",
+    method: "GET",
+    success: function(data) {
+      console.log("User logged in:", data);
+    },
+    error: function() {
+      window.location.replace("login.html");
+    }
+  });
+</script>
 <body style="background-color: lightsteelblue; margin: 0; min-height: 50vh; display: flex; flex-direction: column; align-items: center; padding-top: 10px;">
 
 <div style="width: 100%; max-width: 450px; font-family: Verdana; text-align: center;">
