--- a/WebContent/browse-genre.html
+++ b/WebContent/browse-genre.html
@@ -27,9 +27,10 @@
 <body style="background-color:lightsteelblue;">
 <div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
   <span id="user-info">Loading user…</span>
-  <div>
-    <button id="logout-button" style="margin-right:8px;">Logout</button>
-  </div>
+
+  <button id="checkout-button">Checkout</button>
+  <button id="logout-button">Logout</button>
+
 </div>
 
 <div style="width:90%; margin: 0 auto; font-family: verdana;">
