--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -99,7 +99,7 @@
         </table>
     </div>
 
-    <!-- 🔥 Pagination Controls -->
+    <!--  Pagination Controls -->
     <div class="d-flex justify-content-center mt-4">
         <button id="prev-button" class="btn btn-secondary mx-2">Previous</button>
         <button id="next-button" class="btn btn-secondary mx-2">Next</button>
