--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login to Fablix</title>
+  <title>Login to Fabflix</title>
 </head>
 <body style="background-color: lightsteelblue; margin: 0; height: 50vh; display: flex; justify-content: center; align-items: center;">
 <div style="text-align: center; font-family: Verdana; font-weight: normal; width: 100%; max-width: 400px;">
