--- a/WebContent/single-movie.html
+++ b/WebContent/single-movie.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+
   <style>
     body {
       background-color: lightblue;
@@ -11,21 +12,20 @@
       text-align: center;
     }
     p {
-      font-family: Verdana;
+      font-family: verdana;
     }
     #movie_table th, #movie_table td {
       font-weight: normal;
     }
   </style>
-
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0e263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
 
   <title>Single Movie</title>
 </head>
@@ -34,14 +34,17 @@
 
 <div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
   <span id="user-info">Loading user…</span>
+
+  <button id="checkout-button">Checkout</button>
   <button id="logout-button">Logout</button>
+
 </div>
 
 <div style="width:90%; margin: 0 auto; font-family: Verdana;">
   <!-- Back Button -->
-  <button id="go-back-button" class="btn btn-link mb-3">← Back to Movie List</button>
+  <a href="index.html">← Back to Movie List</a>
 
-  <h1>Single Movie Page</h1>
+  <h1 style="color:black;font-size: 50px; padding-top:20px; padding-bottom:20px;font-family: Verdana;font-weight: normal ">Single Movie Page</h1>
 
   <!-- Movie basic info -->
   <h3 id="movie_info"></h3>
