--- a/WebContent/single-star.html
+++ b/WebContent/single-star.html
@@ -23,8 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0e263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
     <title>Single Star</title>
 </head>
@@ -33,7 +32,10 @@
 
 <div style="display:flex; justify-content:space-between; align-items:center; padding:8px;">
     <span id="user-info">Loading user…</span>
+
+    <button id="checkout-button">Checkout</button>
     <button id="logout-button">Logout</button>
+
 </div>
 
 <div style="width:90%; margin: 0 auto; font-family: Verdana;">
